# AidChain

./: .gitignore  BACKEND_INSTRUCTIONS.md  FRONTEND_BACKEND_GAP_ANALYSIS.md  PRD.md  SMART_CONTRACTS_PRD.md  USER_FLOWS.md  agentPRD.md  aidchain_xgboost_model.pkl  fraud_detection.py
ai-screening-service/: .env.example  .gitignore  README.md  pyproject.toml  test_screening.py
ai-screening-service/aidchain_ai_screening_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-screening-service/app/: __init__.py  agents.py  config.py  graph.py  llm.py  main.py  models.py  scoring.py
backend/: .env  .env.example  .gitignore  go.mod  go.sum  main.go  migrations_001_009_up.txt
backend/blockchain/: client.go  crisis_pool.go  listener.go  pool_factory.go
backend/db/: db.go
backend/handlers/: assignment.go  auth.go  donation.go  ngo.go  pool.go  proof.go  trust.go  verification.go
backend/middleware/: middleware.go
backend/migrations/: 001_create_users.up.sql  002_create_ngo_applications.down.sql  002_create_ngo_applications.up.sql  003_create_crisis_pools.down.sql  003_create_crisis_pools.up.sql  004_create_pool_assignment_requests.down.sql  004_create_pool_assignment_requests.up.sql  005_create_pool_ngo_assignments.down.sql  005_create_pool_ngo_assignments.up.sql  006_create_donations.up.sql  007_create_proof_submissions.down.sql  007_create_proof_submissions.up.sql  008_create_trust_score_logs.down.sql  (+7 more)
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js
smartcontracts/: .gitignore  Makefile  README.md
(+77 files in other folders)
